<resources>
    <string name="app_name">Hold the Narwhal</string>
    <string name="confirm_exit_dialog_title">Exit app?</string>
    <string name="confirm_exit_dialog_confirm">Exit</string>
    <string name="confirm_exit_dialog_cancel">Cancel</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="comments_fragment_title">comments</string>
    <string name="comment_score">%d</string>
    <string name="continue_thread">continue thread</string>
    <plurals name="more_comments">
        <item quantity="one">load %d more comment</item>
        <item quantity="other">load %d more comments</item>
    </plurals>
    <string name="listing_comment_subject_commentreply">comment reply</string>
    <string name="listing_comment_subject_postreply">post reply</string>
    <string name="listing_comment_subject_usernamemention">username mention</string>
    <string name="listing_comment_subtitle_format">by u/%2$s on r/%1$s</string>
    <string name="listing_comment_inbox_subtitle_format">%2$s on r/%1$s</string>
    <string name="comment_metadata_divider">•</string>
    <string name="comment_controversiality_indicator">†</string>
    <string name="comment_edit_text_hint">markdown supported</string>
    <string name="comment_add_submit">submit</string>
    <string name="comment_added">comment successful</string>
    <string name="menu_sort_title">sort by</string>
    <string name="link_sort_hot">hot</string>
    <string name="link_sort_new">new</string>
    <string name="link_sort_top">top</string>
    <string name="link_sort_controversial">controversial</string>
    <string name="comment_sort_best">best</string>
    <string name="comment_sort_top">top</string>
    <string name="comment_sort_new">new</string>
    <string name="comment_sort_controversial">controversial</string>
    <string name="comment_sort_old">old</string>
    <string name="comment_sort_qa">q&#38;a</string>
    <string name="menu_timespan_title">timespan</string>
    <string name="timespan_hour">hour</string>
    <string name="timespan_day">day</string>
    <string name="timespan_week">week</string>
    <string name="timespan_month">month</string>
    <string name="timespan_year">year</string>
    <string name="timespan_all">all</string>
    <string name="menu_action_link">%1$s &#091;%2$s&#093;</string>
    <string name="menu_action_comment">&#091;%2$s&#093; u/%1$s</string>
    <string name="action_settings">settings</string>
    <string name="action_refresh">refresh</string>
    <string name="action_sort">sort</string>
    <string name="action_timespan">timespan</string>
    <string name="action_upvote">upvote</string>
    <string name="action_downvote">downvote</string>
    <string name="action_show_comments">show comments</string>
    <string name="action_share">share</string>
    <string name="action_save">save</string>
    <string name="action_unsave">unsave</string>
    <string name="action_view_subreddit">view r/%s</string>
    <string name="action_view_user_profile">view u/%s</string>
    <string name="action_hide">hide</string>
    <string name="action_unhide">unhide</string>
    <string name="action_open_in_browser">view in browser</string>
    <string name="action_open_comments_in_browser">view comments in browser</string>
    <string name="action_report">report</string>
    <string name="action_reply">reply</string>
    <string name="action_show_permalink">permalink</string>
    <string name="action_block_user">block user</string>
    <string name="action_mark_messages_read">mark messages read</string>
    <string name="action_mark_message_read">mark read</string>
    <string name="action_mark_message_unread">mark unread</string>
    <string name="action_message_reply">reply</string>
    <string name="dialog_sign_out_title">Sign out</string>
    <string name="dialog_sign_out_message">Sign out from user account?</string>
    <string name="dialog_sign_out_ok">OK</string>
    <string name="dialog_sign_out_cancel">Cancel</string>
    <string name="dialog_settings_default_comment_sort">sort comments by</string>
    <string name="dialog_analytics_title">Privacy Note</string>
    <string name="dialog_analytics_message">This app collects anonymous usage statistics to aid
    development of new features. You can disable this any time in settings.</string>
    <string name="dialog_analytics_accept">Dismiss</string>
    <string name="dialog_analytics_decline">Disable</string>
    <string name="dialog_nsfw_title">Over 18?</string>
    <string name="dialog_nsfw_message">You must be over 18 to view content on this subreddit</string>
    <string name="dialog_nsfw_confirm">Continue</string>
    <string name="dialog_nsfw_decline">Take me back</string>
    <string name="report_submit">report</string>
    <string name="report_cancel">cancel</string>
    <string name="report_menu_title">Report</string>
    <string name="report_other_hint">other reason</string>
    <string-array name="report_site_rules">
        <item>Spam</item>
        <item>Personal and confidential information</item>
        <item>Threatening, harassing, or inciting violence</item>
    </string-array>
    <string name="listing_archived">sorry, this is archived</string>
    <string name="vote_failed">vote failed, please try again</string>
    <string name="save_failed">save failed, please try again</string>
    <string name="hide_failed">hide failed, please try again</string>
    <string name="link_hidden">link hidden</string>
    <string name="user_settings_update_confirm">settings updated</string>
    <string name="user_friend_note_save_confirm">friend note saved</string>
    <string name="user_friend_note_save_error">error saving friend note</string>
    <string name="user_friend_add_button_text">add to friends</string>
    <string name="user_friend_add_confirm">user added to friends</string>
    <string name="user_friend_add_error">error adding to friends</string>
    <string name="user_friend_delete_button_text">remove from friends</string>
    <string name="user_friend_delete_confirm">user removed from friends</string>
    <string name="user_friend_delete_error">error removing friend</string>
    <string name="error_xxx">an error has occurred</string>
    <string name="error_network_unavailable">no network connection</string>
    <string name="error_private_subreddit">this subreddit is private</string>
    <string name="error_404">page not found</string>
    <string name="error_500">reddit is experiencing issues, try again later</string>
    <string name="error_503">reddit is unavailable, try again soon</string>
    <string name="error_520">reddit is in maintenance</string>
    <string name="error_authentication">error during authentication</string>
    <string name="error_get_user_identity">error getting user info</string>
    <string name="error_get_user_settings">error loading settings</string>
    <string name="error_get_link_comments">error loading link comments</string>
    <string name="error_get_more_comments">error loading comments</string>
    <string name="error_add_comment">error adding comment</string>
    <string name="error_get_links">error loading links</string>
    <string name="error_get_subreddit_info">error loading subreddit info</string>
    <string name="error_get_user_info">error loading user info</string>
    <string name="error_get_user_trophies">error loading user profile</string>
    <string name="error_get_friend_info">error getting friend info</string>
    <string name="error_get_user_profile_listings">error loading profile listings</string>
    <string name="error_user_settings_update">error updating settings</string>
    <string name="error_get_inbox">error getting inbox</string>
    <string name="inbox_fragment_title">inbox</string>
    <string name="navigation_tabs_all">all</string>
    <string name="navigation_tabs_unread">unread</string>
    <string name="navigation_tabs_messages">messages</string>
    <string name="navigation_tabs_comment_replies">comment replies</string>
    <string name="navigation_tabs_post_replies">post replies</string>
    <string name="navigation_tabs_mentions">mentions</string>
    <plurals name="view_more_messages">
        <item quantity="one">view %d more message</item>
        <item quantity="other">view %d more messages</item>
    </plurals>
    <string name="message_metadata_from">from %s</string>
    <string name="message_metadata_to">to %s</string>
    <string name="message_metadata_sent">sent %s</string>
    <string name="front_page_title">front page</string>
    <plurals name="link_score">
        <item quantity="one">%d point</item>
        <item quantity="other">%d points</item>
    </plurals>
    <string name="link_gilded_text">&#160;× %d</string>
    <string name="link_subreddit">r/%s</string>
    <string name="link_author">u/%s</string>
    <string name="link_domain">%s</string>
    <plurals name="link_comment_count">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <string name="hidden_score_placeholder">\?</string>
    <string name="drawer_navigate_to_subreddit">go to subreddit</string>
    <string name="drawer_log_in">log in</string>
    <string name="drawer_inbox">inbox</string>
    <string name="drawer_user_profile">user profile</string>
    <string name="drawer_subreddits">subreddits</string>
    <string name="drawer_front_page">front page</string>
    <string name="drawer_r_all">/r/all</string>
    <string name="drawer_random_subreddit">/r/random</string>
    <string name="pref_media">link thumbnail options</string>
    <string name="pref_no_profanity">make safe(r) for work</string>
    <string name="pref_no_profanity_summary">don\'t show thumbnails next to anything labeled nsfw</string>
    <string name="pref_domain_details">show more domain details</string>
    <string name="pref_hide_ups">hide submissions after upvoting</string>
    <string name="pref_hide_downs">hide submissions after downvoting</string>
    <string name="pref_numsites">number of links to show</string>
    <string name="pref_min_link_score">minimum score to display</string>
    <string name="pref_min_link_score_hint">leave blank to show all</string>
    <string name="pref_highlight_controversial">label controversial comments (†)</string>
    <string name="pref_min_comment_score">minimum score to display</string>
    <string name="pref_min_comment_score_hint">@string/pref_min_link_score_hint</string>
    <string name="pref_num_comments">number of comments to show</string>
    <string name="pref_num_comments_hint">(1 – 500)</string>
    <string name="pref_threaded_messages">show message conversations</string>
    <string name="pref_collapse_read_messages">collapse messages after reading</string>
    <string name="pref_mark_messages_read">mark messages read when opening inbox</string>
    <string name="pref_monitor_mentions">notify me when I\'m mentioned</string>
    <string name="pref_show_flair">show user flair</string>
    <string name="pref_show_link_flair">show link flair</string>
    <string name="pref_over_18">over 18</string>
    <string name="pref_over_18_summary">I am over 18 years old and willing to view adult content</string>
    <string name="pref_label_nsfw">label posts that are nsfw</string>
    <string name="pref_label_nsfw_summary">requires not \'safer for work\' mode</string>
    <string name="pref_public_votes">make my votes public</string>
    <string name="pref_research">use my data for research</string>
    <string name="pref_hide_from_robots">hide me from search engines</string>
    <string name="pref_beta">enable beta test features</string>
    <string name="pref_store_visits">remember what links I\'ve visited</string>
    <string name="pref_show_gold_expiration">show gold expiration</string>
    <string name="pref_creddit_autorenew">automatically renew gold</string>
</resources>