<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_sort"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/action_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_link_view_subreddit"
        android:title="@string/action_view_subreddit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_link_view_user_profile"
        android:title="@string/action_view_user_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_link_open_in_browser"
        android:title="@string/action_open_in_browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_link_open_comments_in_browser"
        android:title="@string/action_open_comments_in_browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
