<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/action_refresh"
      android:title="@string/action_refresh"
      android:icon="@drawable/ic_refresh_black_24dp"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/action_change_sort"
      android:title="@string/action_sort"
      android:icon="@drawable/ic_sort_black_24dp"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/action_change_timespan"
      android:title="@string/action_timespan"
      android:icon="@drawable/ic_schedule_black_24dp"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/action_settings"
      android:title="@string/action_settings"
      app:showAsAction="never"/>

</menu>
