<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_drawer"
    style="@style/NavigationDrawer"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/drawer_navigate_to_subreddit"
        style="@style/NavigationDrawerItem">

        <EditText
            android:id="@+id/drawer_navigate_to_subreddit_text"
            style="@style/NavigationDrawerEditText"
            android:hint="@string/go_to_subreddit"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/drawer_navigate_to_subreddit_go"
            style="@style/NavigationDrawerItemIcon"
            android:src="@drawable/ic_navigation_go"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_log_in"
        style="@style/NavigationDrawerItem">

        <ImageView
            style="@style/NavigationDrawerItemIcon"/>

        <TextView
            style="@style/NavigationDrawerItemText"
            android:text="@string/drawer_log_in"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_user_profile"
        style="@style/NavigationDrawerItem">

        <ImageView
            style="@style/NavigationDrawerItemIcon"/>

        <TextView
            style="@style/NavigationDrawerItemText"
            android:text="@string/drawer_user_profile"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_front_page"
        style="@style/NavigationDrawerItem">

        <ImageView
            style="@style/NavigationDrawerItemIcon"/>

        <TextView
            style="@style/NavigationDrawerItemText"
            android:text="@string/drawer_front_page"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_r_all"
        style="@style/NavigationDrawerItem">

        <ImageView
            style="@style/NavigationDrawerItemIcon"/>

        <TextView
            style="@style/NavigationDrawerItemText"
            android:text="@string/drawer_r_all"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_subreddits"
        style="@style/NavigationDrawerItem">

        <ImageView
            style="@style/NavigationDrawerItemIcon"/>

        <TextView
            style="@style/NavigationDrawerItemText"
            android:text="@string/drawer_subreddits"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_random_subreddit"
        style="@style/NavigationDrawerItem">

        <ImageView
            style="@style/NavigationDrawerItemIcon"/>

        <TextView
            style="@style/NavigationDrawerItemText"
            android:text="@string/drawer_random_subreddit"/>

    </LinearLayout>

</LinearLayout>